# antigravity-agentkit

./: .bandit  .gitignore  .pylintrc  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  mise.toml  pyproject.toml  requirements.setup.txt  ruff.toml
.claude/: settings.json
.claude/hooks/: block-dangerous.sh
.cursor/: sandbox.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: agent_ship.yml  codeql.yml  mise_toolchain.yml  publish.yml  test-publish.yml  test.yml  test_core_only.yml  trunk_check.yml
.trunk/: trunk.yaml
dev/: build.sh  codeql.sh  publish.sh  setup-tools.sh  setup.sh  test_agent_platform.sh  test_examples.sh  test_platform_live.sh  test_python.sh  test_ship_agent.sh
docs/adr/: 0003-agent-platform-boundary.md  0004-native-platform-operations.md
docs/guides/: 01-getting-started.md  02-your-first-agent.md  03-agent-manifest-reference.md  04-system-instructions.md  05-mcp-integration.md  06-skills-and-subagents.md  07-policies-and-governance.md  08-validation-and-evals.md  09-packaging-and-deployment.md  10-registry-and-publishing.md  11-python-api.md  12-production-workflows.md  13-agent-platform-evaluation.md  README.md
docs/rfcs/: 0001-declarative-antigravity-agentkit.md  0001-markdown-native-agent-packages.md  0002-spec-first-core-frozen-ir.md
docs/schemas/: agent.schema.json  deployment.schema.json  eval.schema.json  policies.schema.json
examples/: README.md
examples/agent_platform/: README.md  SYSTEM.md  agent.yaml  deployment.yaml
examples/agent_platform/evals/: smoke.yaml
examples/agent_platform/subagents/: time-checker.md
examples/gemini_api/: agent.yaml  deployment.yaml
examples/hello_world/: SYSTEM.md  agent.yaml
examples/managed_agents_api/: SYSTEM.md  agent.yaml  deployment.yaml
examples/mcp/: SYSTEM.md  agent.yaml  mcp.json  policies.yaml
examples/mcp/server/: clock_mcp.py
examples/python_embedding/: README.md  slack_bot_pattern.py  tier1_governance.py  tier2_runtime.py  tier3_deploy.py
examples/skills/: SYSTEM.md  agent.yaml  policies.yaml
examples/subagents/: SYSTEM.md  agent.yaml
examples/subagents/subagents/: proofreader.md
src/antigravity_agentkit/: __init__.py  capabilities.py  cli.py  compiler.py  deploy.py  diagnostics.py  evals.py  exceptions.py  ir.py  ir_serde.py  json_types.py  loader.py  mcp.py  operator_auth.py  paths.py  policies.py  project.py  registry.py  runtime.py  runtime_tools.py  sdk.py  skills.py  subagents.py  validator.py
src/antigravity_agentkit/deploy/: __init__.py  _common.py  agent_platform.py  agent_platform_runtime.py  aliases.py  capabilities.py  gemini_api.py  loader.py  managed_agents_api.py  package.py  router.py  target.py
src/antigravity_agentkit/platform/: __init__.py  agent_engines.py  client.py  deploy_state.py  enterprise.py  evals.py  http.py  iam.py  managed_agents.py  observability.py  registry.py  rollback.py  runtime_adapter.py
src/antigravity_agentkit/registry/: __init__.py  gateway.py  metadata.py  publish.py
typings/vertexai/: __init__.pyi
(+74 files in other folders)
