[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".git",
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
  ".pyright",
  ".pytest_cache",
  ".github",
  ".gitignore",
  ".cursorignore",
  ".claude",
  ".agents",
  ".cursor",
  ".codex",
  "CLAUDE.md",
  "AGENTS.md",
  ".trunk",
  "dev",
  "src/antigravity_agentkit/tests",
  "examples",
  "dist",
  ".python-version",
  "Makefile",
  "requirements.setup.txt",
  "mise.toml",
  "mise.lock",
  ".bandit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/antigravity_agentkit"]

[project]
name = "antigravity-agentkit"
version = "0.1.0"
authors = [{ name = "yu-iskw" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
description = "Declarative agent compiler and governance layer for Google Antigravity SDK"
dependencies = [
  "jsonschema>=4.26.0",
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "typer>=0.26.7",
]

[project.scripts]
antigravity-agentkit = "antigravity_agentkit.cli:main"
[project.optional-dependencies]
antigravity = ["google-antigravity>=0.1.4"]
gcp = ["google-auth>=2", "google-cloud-aiplatform[agent_engines]>=1.144"]
all = ["antigravity-agentkit[antigravity,gcp]"]

[tool.pytest.ini_options]
testpaths = ["src/antigravity_agentkit/tests"]
markers = [
  "live: real network/SDK integration (excluded from default make test)",
  "core: pure core tests that do not require google-antigravity",
  "antigravity: tests that require the google-antigravity SDK",
  "gcp: tests that require GCP client libraries",
]

[dependency-groups]
dev = [
  "xenon>=0.9.3",
  "pytest>=8.3.5",
  "pytest-cov>=6.0",
  "bandit>=1.8.3",
  "ruff>=0.15.0",
  "pyright>=1.1.0",
  "pylint>=3.3.5",
  "vulture>=2.16",
  "ssort>=0.16.0",
  "google-antigravity>=0.1.4",
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
stubPath = "typings"
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = "warning"

[tool.vulture]
paths = ["src/antigravity_agentkit"]
min_confidence = 80

[tool.coverage.run]
branch = true
source = ["src/antigravity_agentkit"]

[tool.coverage.report]
show_missing = true
omit = ["*/tests/*"]
